[charts/redis-ha] Removing PSP & Adding Kyverno adjustments to securityContexts.  (#224)
* Replacing PSP with newer securityContext expectations

Signed-off-by: Aaron Layfield <aaron.layfield@gmail.com>

* Adding secomp Profiles

Signed-off-by: Aaron Layfield <aaron.layfield@gmail.com>

* Removing role PSP segment and PSP mentions

Signed-off-by: Aaron Layfield <aaron.layfield@gmail.com>

* Adding breaking changes & Upgrading Kubernetes in test

Signed-off-by: Aaron Layfield <aaron.layfield@gmail.com>

* Updating kubernetes name

Signed-off-by: Aaron Layfield <aaron.layfield@gmail.com>

* Updating Kind Node version

Signed-off-by: Aaron Layfield <aaron.layfield@gmail.com>

* Indentation suggestions

Signed-off-by: Aaron Layfield <aaron.layfield@gmail.com>

* Adjustments per comments.

Signed-off-by: Aaron Layfield <aaron.layfield@gmail.com>

* Chart minor version bump

Signed-off-by: Aaron Layfield <aaron.layfield@gmail.com>

Signed-off-by: Aaron Layfield <aaron.layfield@gmail.com>

--- a/charts/redis-ha/values.yaml
+++ b/charts/redis-ha/values.yaml
@@ -63,6 +63,7 @@ serviceAccount:
 ## Recommend for externally exposed Redis clusters.
 ## ref: https://cbonte.github.io/haproxy-dconv/1.9/intro.html
 haproxy:
+  enabled: true
   servicePort: 6379
   containerPort: 6379
   ## Enable TLS termination on HAproxy, This will create a volume mount
@@ -71,7 +72,6 @@ haproxy:
     secretName: ""
     keyName:
     certMountPath: /tmp/
-  enabled: false
   # Enable if you want a dedicated port in haproxy for redis-slaves
   readOnly:
     enabled: false
@@ -94,14 +94,6 @@ haproxy:
   annotations: {}
   resources: {}
   emptyDir: {}
-
-  ## PodSecurityPolicy configuration
-  ## ref: https://kubernetes.io/docs/concepts/policy/pod-security-policy/
-  ##
-  podSecurityPolicy:
-    ## Specifies whether a PodSecurityPolicy should be created
-    ##
-    create: false
 
   ## Pod Disruption Budget
   ## ref: https://kubernetes.io/docs/tasks/run-application/configure-pdb/
@@ -165,9 +157,18 @@ haproxy:
   checkFall: 1
 
   securityContext:
-    runAsUser: 1000
-    fsGroup: 1000
+    runAsUser: 99
+    fsGroup: 99
     runAsNonRoot: true
+
+  containerSecurityContext:
+    runAsNonRoot: true
+    allowPrivilegeEscalation: false
+    seccompProfile:
+      type: RuntimeDefault
+    capabilities:
+      drop:
+      - ALL
 
   ## Whether the haproxy pods should be forced to run on separate nodes.
   hardAntiAffinity: true
@@ -189,14 +190,6 @@ haproxy:
   ## Container lifecycle hooks
   ## Ref: https://kubernetes.io/docs/concepts/containers/container-lifecycle-hooks/
   lifecycle: {}
-
-## PodSecurityPolicy configuration
-## ref: https://kubernetes.io/docs/concepts/policy/pod-security-policy/
-##
-podSecurityPolicy:
-  ## Specifies whether a PodSecurityPolicy should be created
-  ##
-  create: false
 
 ## Role Based Access
 ## Ref: https://kubernetes.io/docs/admin/authorization/rbac/
@@ -387,6 +380,16 @@ securityContext:
   runAsUser: 1000
   fsGroup: 1000
   runAsNonRoot: true
+
+containerSecurityContext:
+  runAsUser: 1000
+  runAsNonRoot: true
+  allowPrivilegeEscalation: false
+  seccompProfile:
+    type: RuntimeDefault
+  capabilities:
+    drop:
+    - ALL
 
   ## Assuming your kubelet allows it, you can the following instructions to configure
   ## specific sysctl parameters
