--- a/charts/redis-ha/templates/redis-ha-statefulset.yaml
+++ b/charts/redis-ha/templates/redis-ha-statefulset.yaml
@@ -105,8 +105,7 @@ spec:
       {{- if .Values.imagePullSecrets }}
       imagePullSecrets: {{ toYaml .Values.imagePullSecrets | nindent 8 }}
       {{- end }}
-      securityContext:
-{{ toYaml .Values.securityContext | indent 8 }}
+      securityContext: {{ toYaml .Values.securityContext | nindent 8 }}
       serviceAccountName: {{ template "redis-ha.serviceAccountName" . }}
       automountServiceAccountToken: {{ .Values.serviceAccount.automountToken }}
       initContainers:
@@ -114,29 +113,22 @@ spec:
       - name: init-sysctl
         image: {{ template "redis.sysctl.image" . }}
         imagePullPolicy: {{ .Values.sysctlImage.pullPolicy }}
-        resources:
-{{ toYaml .Values.sysctlImage.resources | indent 10 }}
+        resources: {{ toYaml .Values.sysctlImage.resources | nindent 10 }}
         {{- if .Values.sysctlImage.mountHostSys }}
         volumeMounts:
         - name: host-sys
           mountPath: /host-sys
         {{- end }}
-        command:
-{{ toYaml .Values.sysctlImage.command | indent 10 }}
-        securityContext:
-          runAsNonRoot: false
-          privileged: true
-          runAsUser: 0
+        command: {{ toYaml .Values.sysctlImage.command | nindent 10 }}
+        securityContext: {{ toYaml .Values.containerSecurityContext | nindent 10 }}        
       {{- end }}
 {{- if and .Values.hostPath.path .Values.hostPath.chown }}
       - name: hostpath-chown
         image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
-        securityContext:
-          runAsNonRoot: false
-          runAsUser: 0
+        securityContext: {{ toYaml .Values.containerSecurityContext | nindent 10 }}        
         command:
         - chown
-        - "{{ .Values.securityContext.runAsUser }}"
+        - "{{ .Values.containerSecurityContext.runAsUser }}"
         - /data
         volumeMounts:
         - name: data
@@ -151,6 +143,7 @@ spec:
         - sh
         args:
         - /readonly-config/init.sh
+        securityContext: {{ toYaml .Values.containerSecurityContext | nindent 10 }}        
         env:
 {{- $replicas := int (toString .Values.replicas) -}}
 {{- range $i := until $replicas }}
@@ -238,9 +231,7 @@ spec:
            && if test -s /data/dump.rdb; \
               then cp -v /data/dump.rdb /data/dump.rdb_orig; fi \
            && mv -v /data/dump.rdb_ /data/dump.rdb"
-        securityContext:
-          runAsNonRoot: false
-          runAsUser: 0
+        securityContext: {{ toYaml .Values.containerSecurityContext | nindent 10 }}        
         envFrom:
         - secretRef:
           {{- if .Values.restore.existingSecret }}
@@ -263,6 +254,7 @@ spec:
         - redis-server
         args:
         - /data/conf/redis.conf
+        securityContext: {{ toYaml .Values.containerSecurityContext | nindent 10 }}        
         {{- if .Values.auth }}
         env:
         - name: AUTH
@@ -332,6 +324,7 @@ spec:
           - redis-sentinel
         args:
           - /data/conf/sentinel.conf
+        securityContext: {{ toYaml .Values.containerSecurityContext | nindent 10 }}        
 {{- if or .Values.auth .Values.sentinel.auth}}
         env:
   {{- if .Values.auth }}
@@ -412,6 +405,7 @@ spec:
           - sh
         args:
           - /readonly-config/fix-split-brain.sh
+        securityContext: {{ toYaml .Values.containerSecurityContext | nindent 10 }}        
         env:
 {{- $replicas := int (toString .Values.replicas) -}}
 {{- range $i := until $replicas }}
