--- a/charts/redis-ha/templates/tests/test-redis-ha-configmap.yaml
+++ b/charts/redis-ha/templates/tests/test-redis-ha-configmap.yaml
@@ -8,10 +8,8 @@ metadata:
   annotations:
     "helm.sh/hook": test-success
 spec:
-  nodeSelector:
-{{ toYaml .Values.nodeSelector | indent 4 }}
-  tolerations:
-{{ toYaml .Values.tolerations | indent 4 }}
+  nodeSelector: {{ toYaml .Values.nodeSelector | nindent 4 }}
+  tolerations: {{ toYaml .Values.tolerations | nindent 4 }}
   containers:
   - name: check-init
     image: {{ .Values.configmapTest.image.repository }}:{{ .Values.configmapTest.image.tag }}
@@ -22,6 +20,7 @@ spec:
     - name: config
       mountPath: /readonly-config
       readOnly: true
+    securityContext: {{ toYaml .Values.containerSecurityContext | nindent 6 }}
   {{- if .Values.imagePullSecrets }}
   imagePullSecrets: {{ toYaml .Values.imagePullSecrets | nindent 4 }}
   {{- end }}
