[redis-ha] Adding IPv6 Option for certain HAProxy binds. (#223)
* Adding IPv6 Option for certain HAProxy binds.

Signed-off-by: Aaron Layfield <aaron.layfield@gmail.com>

* Updating README.md

Signed-off-by: Aaron Layfield <aaron.layfield@gmail.com>

* Updating Chart.yaml

Signed-off-by: Aaron Layfield <aaron.layfield@gmail.com>

Signed-off-by: Aaron Layfield <aaron.layfield@gmail.com>

--- a/charts/redis-ha/values.yaml
+++ b/charts/redis-ha/values.yaml
@@ -191,6 +191,10 @@ haproxy:
   ## Ref: https://kubernetes.io/docs/concepts/containers/container-lifecycle-hooks/
   lifecycle: {}
 
+  ## Enable HAProxy parameters to bind and consume IPv6 addresses. Enabled by default.
+  IPv6:
+    enabled: true
+
 ## Role Based Access
 ## Ref: https://kubernetes.io/docs/admin/authorization/rbac/
 ##
