--- a/charts/redis-ha/values.yaml
+++ b/charts/redis-ha/values.yaml
@@ -3,7 +3,7 @@
 ##
 image:
   repository: redis
-  tag: 6.2.5-alpine
+  tag: 7.0.4-alpine3.16
   pullPolicy: IfNotPresent
 
 ## Reference to one or more secrets to be used when pulling images
@@ -79,7 +79,7 @@ haproxy:
   replicas: 3
   image:
     repository: haproxy
-    tag: 2.6.2
+    tag: 2.6.4
     pullPolicy: IfNotPresent
 
   ## Custom labels for the haproxy pod
