[charts/redis-ha] Adding resource options to the test pods. (#225)
* Adding resources to test pods.

Signed-off-by: Aaron Layfield <aaron.layfield@gmail.com>

* Remove default resources on ConfigMapTest

Signed-off-by: Aaron Layfield <aaron.layfield@gmail.com>

* Reverting changes to the configmapTest image

Signed-off-by: Aaron Layfield <aaron.layfield@gmail.com>

Signed-off-by: Aaron Layfield <aaron.layfield@gmail.com>

--- a/charts/redis-ha/values.yaml
+++ b/charts/redis-ha/values.yaml
@@ -45,6 +45,8 @@ configmapTest:
   image:
     repository: koalaman/shellcheck
     tag: v0.5.0
+  ## Resources for the ConfigMap test pod
+  resources: {}
 
 ## Pods Service Account
 ## ref: https://kubernetes.io/docs/tasks/configure-pod-container/configure-service-account/
@@ -190,6 +192,10 @@ haproxy:
   ## Container lifecycle hooks
   ## Ref: https://kubernetes.io/docs/concepts/containers/container-lifecycle-hooks/
   lifecycle: {}
+
+  ## HAProxy test related options
+  tests:
+    resources: {}
 
   ## Enable HAProxy parameters to bind and consume IPv6 addresses. Enabled by default.
   IPv6:
