--- a/charts/redis-ha/templates/tests/test-redis-ha-configmap.yaml
+++ b/charts/redis-ha/templates/tests/test-redis-ha-configmap.yaml
@@ -20,6 +20,7 @@ spec:
     - name: config
       mountPath: /readonly-config
       readOnly: true
+    resources: {{ toYaml .Values.configmapTest.resources | nindent 6 }}
     securityContext: {{ toYaml .Values.containerSecurityContext | nindent 6 }}
   {{- if .Values.imagePullSecrets }}
   imagePullSecrets: {{ toYaml .Values.imagePullSecrets | nindent 4 }}
