ADD extraAnnotations value allowing to add annotations for every single resource generate, from a single value declaration

--- a/charts/redis-ha/templates/redis-ha-announce-service.yaml
+++ b/charts/redis-ha/templates/redis-ha-announce-service.yaml
@@ -19,6 +19,9 @@ metadata:
   {{- if $root.Values.serviceAnnotations }}
 {{ toYaml $root.Values.serviceAnnotations | indent 4 }}
   {{- end }}
+  {{- range $key, $value := .Values.extraAnnotations }}
+    {{ $key }}: {{ $value | quote }}
+  {{- end }}
 spec:
   publishNotReadyAddresses: true
   type: ClusterIP
