--- a/charts/redis-ha/templates/redis-ha-network-policy.yaml
+++ b/charts/redis-ha/templates/redis-ha-network-policy.yaml
@@ -10,6 +10,9 @@ metadata:
     {{- range $key, $value := .Values.networkPolicy.annotations }}
     {{ $key }}: {{ $value | quote }}
     {{- end }}
+    {{- range $key, $value := .Values.extraAnnotations }}
+    {{ $key }}: {{ $value | quote }}
+    {{- end }}
 {{- end }}
   labels:
 {{ include "labels.standard" . | indent 4 }}
