--- a/charts/redis-ha/templates/redis-ha-secret.yaml
+++ b/charts/redis-ha/templates/redis-ha-secret.yaml
@@ -10,6 +10,10 @@ kind: Secret
 metadata:
   name: {{ include "redis-ha.fullname" . }}-secret
   namespace: {{ .Release.Namespace | quote }}
+  annotations:
+    {{- range $key, $value := .Values.extraAnnotations }}
+    {{ $key }}: {{ $value | quote }}
+    {{- end }}
   labels:
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
