--- a/charts/redis-ha/templates/redis-haproxy-rolebinding.yaml
+++ b/charts/redis-ha/templates/redis-haproxy-rolebinding.yaml
@@ -5,6 +5,10 @@ kind: RoleBinding
 metadata:
   name: {{ template "redis-ha.fullname" . }}-haproxy
   namespace: {{ .Release.Namespace | quote }}
+  annotations:
+    {{- range $key, $value := .Values.extraAnnotations }}
+    {{ $key }}: {{ $value | quote }}
+    {{- end }}
   labels:
 {{ include "labels.standard" . | indent 4 }}
     component: {{ template "redis-ha.fullname" . }}-haproxy
