--- a/charts/redis-ha/templates/redis-ha-exporter-script-configmap.yaml
+++ b/charts/redis-ha/templates/redis-ha-exporter-script-configmap.yaml
@@ -4,6 +4,10 @@ kind: ConfigMap
 metadata:
   name: {{ template "redis-ha.fullname" . }}-exporter-script-configmap
   namespace: {{ .Release.Namespace | quote }}
+  annotations:
+    {{- range $key, $value := .Values.extraAnnotations }}
+    {{ $key }}: {{ $value | quote }}
+    {{- end }}
   labels:
 {{ include "labels.standard" . | indent 4 }}
     {{- range $key, $value := .Values.extraLabels }}
