--- a/charts/redis-ha/templates/redis-haproxy-serviceaccount.yaml
+++ b/charts/redis-ha/templates/redis-haproxy-serviceaccount.yaml
@@ -4,6 +4,10 @@ kind: ServiceAccount
 metadata:
   name: {{ template "redis-ha.serviceAccountName" . }}-haproxy
   namespace: {{ .Release.Namespace | quote }}
+  annotations:
+    {{- range $key, $value := .Values.extraAnnotations }}
+    {{ $key }}: {{ $value | quote }}
+    {{- end }}
   labels:
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
