--- a/charts/redis-ha/templates/redis-tls-secret.yaml
+++ b/charts/redis-ha/templates/redis-tls-secret.yaml
@@ -5,6 +5,10 @@ metadata:
   metadata:
   name: {{ template "redis-ha.fullname" . }}-tls-secret
   namespace: {{ .Release.Namespace | quote }}
+  annotations:
+    {{- range $key, $value := .Values.extraAnnotations }}
+    {{ $key }}: {{ $value | quote }}
+    {{- end }}
   labels:
 {{ include "labels.standard" . | indent 4 }}
     {{- range $key, $value := .Values.extraLabels }}
