Allows changes on command/args/env redis container
Signed-off-by: Benoit Sobrie <benoit.sobrie@outlook.com>

--- a/charts/redis-ha/values.yaml
+++ b/charts/redis-ha/values.yaml
@@ -231,6 +231,12 @@ redis:
   port: 6379
   masterGroupName: "mymaster"       # must match ^[\\w-\\.]+$) and can be templated
 
+  command:
+  - redis-server
+
+  args:
+  - /data/conf/redis.conf
+
   ## Configures redis with tls-port parameter
   # tlsPort: 6385
 
