--- a/charts/redis-ha/templates/redis-ha-prometheus-rule.yaml
+++ b/charts/redis-ha/templates/redis-ha-prometheus-rule.yaml
@@ -7,9 +7,7 @@ metadata:
   namespace: {{ .Values.prometheusRule.namespace }}
   {{- end }}
   annotations:
-    {{- range $key, $value := .Values.extraAnnotations }}
-    {{ $key }}: {{ $value | quote }}
-    {{- end }}
+{{ toYaml .Values.extraAnnotations | indent 4 }}
   labels: {{- toYaml .Values.prometheusRule.additionalLabels | nindent 4 }}
 spec:
   groups:
