--- a/charts/redis-ha/templates/redis-ha-serviceaccount.yaml
+++ b/charts/redis-ha/templates/redis-ha-serviceaccount.yaml
@@ -5,9 +5,7 @@ metadata:
   name: {{ template "redis-ha.serviceAccountName" . }}
   namespace: {{ .Release.Namespace | quote }}
   annotations:
-    {{- range $key, $value := .Values.extraAnnotations }}
-    {{ $key }}: {{ $value | quote }}
-    {{- end }}
+{{ toYaml .Values.extraAnnotations | indent 4 }}
   labels:
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
