--- a/charts/redis-ha/templates/redis-haproxy-service.yaml
+++ b/charts/redis-ha/templates/redis-haproxy-service.yaml
@@ -14,12 +14,7 @@ metadata:
     {{ $key }}: {{ $value | quote }}
 {{- end }}
   annotations:
-  {{- if .Values.haproxy.service.annotations }}
-{{ toYaml .Values.haproxy.service.annotations | indent 4 }}
-  {{- end }}
-  {{- range $key, $value := .Values.extraAnnotations }}
-    {{ $key }}: {{ $value | quote }}
-  {{- end }}
+{{ toYaml (merge .Values.haproxy.service.annotations .Values.extraAnnotations) | indent 4 }}
 spec:
   type: {{ default "ClusterIP" .Values.haproxy.service.type }}
   {{- if and (eq .Values.haproxy.service.type "LoadBalancer") .Values.haproxy.service.loadBalancerIP }}
