--- a/charts/redis-ha/templates/redis-ha-network-policy.yaml
+++ b/charts/redis-ha/templates/redis-ha-network-policy.yaml
@@ -5,15 +5,8 @@ apiVersion: networking.k8s.io/v1
 metadata:
   name: {{ template "redis-ha.fullname" . }}-network-policy
   namespace: {{ .Release.Namespace | quote }}
-{{- if .Values.networkPolicy.annotations }}
   annotations:
-    {{- range $key, $value := .Values.networkPolicy.annotations }}
-    {{ $key }}: {{ $value | quote }}
-    {{- end }}
-    {{- range $key, $value := .Values.extraAnnotations }}
-    {{ $key }}: {{ $value | quote }}
-    {{- end }}
-{{- end }}
+{{ toYaml (merge .Values.networkPolicy.annotations .Values.extraAnnotations) | indent 4 }}
   labels:
 {{ include "labels.standard" . | indent 4 }}
     {{- range $key, $value := .Values.networkPolicy.labels }}
