[stable/redis-ha] set default haproxy image to alpine build, fix issue #248.
Signed-off-by: Martijn van der Ploeg <martijnvanderploeg@outlook.com>

--- a/charts/redis-ha/values.yaml
+++ b/charts/redis-ha/values.yaml
@@ -81,7 +81,7 @@ haproxy:
   replicas: 3
   image:
     repository: haproxy
-    tag: 2.6.9
+    tag: 2.6.9-alpine
     pullPolicy: IfNotPresent
 
   ## Custom labels for the haproxy pod
