--- a/charts/redis-ha/templates/redis-ha-serviceaccount.yaml
+++ b/charts/redis-ha/templates/redis-ha-serviceaccount.yaml
@@ -16,10 +16,10 @@ metadata:
 secrets:
 {{- end }}
 {{- if .Values.auth }}
-- name: {{ default (include "redis-ha.fullname" .) .Values.existingSecret }}
+- name: {{ default (include "redis-ha.fullname" .) (tpl (.Values.existingSecret | default "" ) . ) }}
 {{- end }}
 {{- if .Values.sentinel.auth }}
-- name: {{ default (printf "%s-sentinel" (include "redis-ha.fullname" .)) .Values.sentinel.existingSecret }}
+- name: {{ default (printf "%s-sentinel" (include "redis-ha.fullname" .)) (tpl (.Values.sentinel.existingSecret | default "" ) . ) }}
 {{- end }}
 {{- if .Values.imagePullSecrets }}
 imagePullSecrets: {{ toYaml .Values.imagePullSecrets | nindent 0 }}
