--- a/charts/redis-ha/templates/redis-tls-secret.yaml
+++ b/charts/redis-ha/templates/redis-tls-secret.yaml
@@ -1,4 +1,4 @@
-{{- if and .Values.redis.tlsPort (not .Values.tls.secretName) -}}
+{{- if and .Values.redis.tlsPort (not (tpl (.Values.tls.secretName | default "" ) . )) -}}
 apiVersion: v1
 kind: Secret
 metadata:
