--- a/charts/redis-ha/templates/sentinel-auth-secret.yaml
+++ b/charts/redis-ha/templates/sentinel-auth-secret.yaml
@@ -1,4 +1,4 @@
-{{- if and .Values.sentinel.auth (not .Values.sentinel.existingSecret) -}}
+{{- if and .Values.sentinel.auth (not (tpl ( .Values.sentinel.existingSecret | default "" ) . )) -}}
 apiVersion: v1
 kind: Secret
 metadata:
