Add Haproxy network policies
Signed-off-by: Denis Kadyshev <metajiji@gmail.com>

--- a/charts/redis-ha/values.yaml
+++ b/charts/redis-ha/values.yaml
@@ -209,6 +209,31 @@ haproxy:
   IPv6:
     enabled: true
 
+  networkPolicy:
+    ## whether NetworkPolicy for Haproxy should be created
+    enabled: false
+    annotations: {}
+    labels: {}
+    ## user defines ingress rules that Haproxy should permit into
+    ## uses the format defined in https://kubernetes.io/docs/concepts/overview/working-with-objects/labels/#label-selectors
+    ingressRules: []
+      # - selectors:
+      #   - namespaceSelector:
+      #       matchLabels:
+      #         name: my-redis-client-namespace
+      #     podSelector:
+      #       matchLabels:
+      #         application: redis-client
+      ## if ports is not defined then it defaults to the ports defined for enabled services (redis, sentinel)
+      #   ports:
+      #     - port: 6379
+      #       protocol: TCP
+      #     - port: 26379
+      #       protocol: TCP
+
+    ## user can define egress rules too, uses the same structure as ingressRules
+    egressRules: []
+
 ## Role Based Access
 ## Ref: https://kubernetes.io/docs/admin/authorization/rbac/
 ##
