[stable/redis-ha] set default haproxy image to alpine build, fix issu… (#251)
* [stable/redis-ha] set default haproxy image to alpine build, fix issue #248.

Signed-off-by: Martijn van der Ploeg <martijnvanderploeg@outlook.com>

* Update Chart.yaml

* Update Redis + Chart.yaml

Signed-off-by: Aaron Layfield <aaron.layfield@gmail.com>

---------

Signed-off-by: Martijn van der Ploeg <martijnvanderploeg@outlook.com>
Signed-off-by: Aaron Layfield <aaron.layfield@gmail.com>
Co-authored-by: Aaron Layfield <Aaron.Layfield@gmail.com>

--- a/charts/redis-ha/values.yaml
+++ b/charts/redis-ha/values.yaml
@@ -3,7 +3,7 @@
 ##
 image:
   repository: redis
-  tag: 7.0.9-alpine3.17
+  tag: 7.2.4-alpine
   pullPolicy: IfNotPresent
 
 ## Reference to one or more secrets to be used when pulling images
@@ -87,7 +87,7 @@ haproxy:
     #   maxUnavailable: 25%
   image:
     repository: haproxy
-    tag: 2.6.9
+    tag: 2.9.4-alpine
     pullPolicy: IfNotPresent
 
   ## Custom labels for the haproxy pod
